[package]
name = "enum-error-derive"
version = "0.1.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]

description = "Derive Error traits"
documentation = "https://docs.rs/enum-error-derive/"
repository = "https://github.com/termoshtt/enum-error-derive"
keywords = ["proc_macro"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = "0.11.3"
quote = "0.3.15"
