[package]
name = "procedurals"
version = "0.2.2"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]

description = "Collection of proc-macros"
documentation = "https://docs.rs/procedurals/"
repository = "https://github.com/termoshtt/procedurals"
keywords = ["proc_macro"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = "0.11.3"
quote = "0.3.15"
