[package]
name = "procedurals"
version = "0.3.2-alpha.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]

description = "Collection of proc-macros"
documentation = "https://docs.rs/procedurals/"
repository = "https://github.com/termoshtt/procedurals"
keywords = ["proc_macro"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = "0.14"
quote = "0.6"
